--- a/src/app/background/background.component.html
+++ b/src/app/background/background.component.html
@@ -1,5 +1,6 @@
 <div id="login-page">
   <div id="login-body">
+    <h3 class="header">enter email & password:</h3>
     <div id="form-body" >
       <router-outlet></router-outlet>
     </div>
