--- a/src/app/chatroom/chatroom.component.html
+++ b/src/app/chatroom/chatroom.component.html
@@ -43,7 +43,7 @@
   <div class="input-container">
     <input class="input-message" [formControl]="message" type="text">
     <button class="btn" mat-raised-button (click)="SendMessage(message)" >
-      <mat-icon>send</mat-icon>
+      <mat-icon class="icon">send</mat-icon>
     </button>
   </div>
 </div>
