--- a/src/app/background/background.component.css
+++ b/src/app/background/background.component.css
@@ -7,7 +7,7 @@
 
 #login-body {
   position: absolute;
-  background:  rgba(155, 160, 162, .2);
+  background:  rgba(300, 255, 255, .9);
   border-radius: 20px;
 }
 
@@ -24,7 +24,7 @@
   cursor: pointer;
   text-align: center;
   font-size: 1.4em;
-  background: rgba(218, 215, 205, .5);
+  background: rgba(218, 215, 205, .9);
 }
 
 .reg-btn {
@@ -40,6 +40,10 @@
 @media only screen and  (min-width: 300px) {
   #login-body {
     margin: 15vh 6vw 3vh 6vw;
+  }
+
+  .header {
+    margin: 1em 3em;
   }
 
   #form-body {
