--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -25,7 +25,7 @@ ul {
 }
 
 .chat-content {
-  margin: 6% 11% 2%;
+  margin: 6% 8% 4%;
 }
 
 .headers-container {
@@ -36,12 +36,13 @@ ul {
 }
 
 .chat-container {
-  margin: 2vh 4vw;
+  margin: 3vh 4vw;
   padding: 2vh 0 2vh 2vw;
-  background: rgba(148, 133, 127, .2);
+  background: rgba(255, 255, 255, .9);
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   border-bottom: 1px solid wheat;
+  box-shadow: 6px 6px 5px 7px;
 }
 
 .chat-image {
@@ -55,7 +56,8 @@ ul {
 .chat-title {
   padding-left: 20%;
   margin: .6vh 0;
-  color: white;
+  color: black;
+  font-size: 1.5em;
 }
 
 .message-content {
@@ -75,7 +77,7 @@ ul {
 }
 
 .btn {
-  color: white;
+  color: black;
 }
 
 #menu-span {
@@ -86,19 +88,23 @@ ul {
 }
 
 #menu-icon {
-  color: white;
+  color: black;
+  box-shadow: 19px 1px 0px 9px;
+  background: wheat;
+
 }
 
 .title {
   font-family: fantasy ;
   align-self: center;
-  font-size: 2em;
-  border-bottom: 2px solid white;
+  font-size: 3em;
+  /* border: 4px solid ; */
+  box-shadow: 0px 5px 0px 10px;
 }
 
 
 ::ng-deep .mat-menu-content {
-  background: rgba(0,0,0,.6);
+  /* background: rgba(0,0,0,.6); */
 }
 
 
@@ -127,9 +133,11 @@ ul {
 
   .icon {
     transform: scale(2);
-    color: white;
-    padding-top: 1vh;
-    opacity: .7;
+    color: black;
+    /* padding-top: 1vh; */
+    border-radius: 50%;
+    box-shadow: 0px 2px 4px 4px;
+
   }
 
   #menu-icon {
