--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+html, body {
+  height: 100%;
+  background: linear-gradient(45deg, darkgray, transparent);
+}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
   background-image:  url('./assets/images/pngegg (18).png');
   background-size: 100% 50%;
