--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -31,14 +31,13 @@ ul {
 .headers-container {
   display: flex;
   flex-direction: column;
-  font-family: cursive ;
   margin: 0;
 }
 
 .chat-container {
   margin: 3vh 4vw;
   padding: 2vh 0 2vh 2vw;
-  background: rgba(255, 255, 255, .9);
+  background: rgba(245, 222, 179, .8);
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   border-bottom: 1px solid wheat;
@@ -101,6 +100,8 @@ ul {
   /* border: 4px solid ; */
   box-shadow: 0px 5px 0px 10px;
   background: wheat;
+  position: relative;
+  top: -.5em;
 }
 
 
