--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -70,7 +70,7 @@ ul {
   justify-content: center;
   grid-row: 3;
   grid-column: 1/3;
-  height: 8vh;
+  height: 10vh;
   margin-top: 1%;
   /* background: slategray; */
 }
@@ -126,7 +126,7 @@ ul {
 
   .chat-wrap {
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: auto 72vh auto;
+    grid-template-rows: auto 74vh auto;
   }
 
   .sidenav-button {
@@ -139,7 +139,7 @@ ul {
     /* padding-top: 1vh; */
     border-radius: 50%;
     box-shadow: 0px 2px 4px 4px;
-
+    margin-top: .4em;
   }
 
   #menu-icon {
