--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -25,38 +25,49 @@ ul {
 }
 
 .chat-content {
-  margin: 6% 8% 4%;
+  margin: 6% 2% ;
 }
 
 .headers-container {
   display: flex;
   flex-direction: column;
   margin: 0;
+  height: 5em;
+  background: #00737a;
 }
 
 .chat-container {
-  margin: 3vh 4vw;
+  /* margin: 4vh 4vw;
   padding: 2vh 0 2vh 2vw;
   background: rgba(245, 222, 179, .8);
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
   border-bottom: 1px solid wheat;
-  box-shadow: 6px 6px 5px 7px;
+  box-shadow: 0px 5px 4px 10px; */
+  display: flex;
+  margin: .5em .7em;
+  width: 97%;
+  box-sizing: border-box;
+
 }
 
 .chat-image {
   position: relative;
   transform: scale(1.5);
   border: 1px solid black;
-  margin-left: 2vw;
+  margin: 1vh 1vw;
   border-radius: 50%;
+  color: white;
 }
 
 .chat-title {
-  padding-left: 20%;
-  margin: .6vh 0;
-  color: black;
+  padding-left: 15%;
+  padding-bottom: .3em;
+  /* margin: .6vh 0vw .6vh 3vw; */
+  margin: 0 .4em;
+  color: wheat;
   font-size: 1.5em;
+  width: 82%;
+  height: 5vh;
+  border-bottom: 2px solid wheat;
 }
 
 .message-content {
@@ -79,29 +90,25 @@ ul {
   color: black;
 }
 
-#menu-span {
-  align-self: flex-end;
-  height: 6vh;
-  z-index: 5;
-  padding-top: .6em;
+#menu-icon {
+  padding-top: 3vh;
+  transform: scale(1.5);
+  color: black;
+  background: wheat;
 }
 
-#menu-icon {
-  color: black;
-  box-shadow: 19px 1px 0px 9px;
-  background: wheat;
-
+#menu-span {
+ margin-left: auto;
+ /* padding-bottom: 3vh; */
+  z-index: 5;
+  color: white;
 }
 
 .title {
-  font-family: fantasy ;
+  font-family: sans-serif ;
   align-self: center;
   font-size: 3em;
-  /* border: 4px solid ; */
-  box-shadow: 0px 5px 0px 10px;
-  background: wheat;
-  position: relative;
-  top: -.5em;
+  color: wheat;
 }
 
 
@@ -126,7 +133,7 @@ ul {
 
   .chat-wrap {
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: auto 74vh auto;
+    grid-template-rows: auto 75.5vh auto;
   }
 
   .sidenav-button {
@@ -135,11 +142,11 @@ ul {
 
   .icon {
     transform: scale(2);
-    color: black;
+    color: wheat;
     /* padding-top: 1vh; */
     border-radius: 50%;
-    box-shadow: 0px 2px 4px 4px;
-    margin-top: .4em;
+    box-shadow: 0px 0px 0px 1px wheat;
+    margin-top: 1em;
   }
 
   #menu-icon {
