--- a/src/styles.css
+++ b/src/styles.css
@@ -2,10 +2,8 @@
 
 html, body {
   height: 100%;
-  background: linear-gradient(45deg, wheat, #00737a);
+
 }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
-  background-image:  url('./assets/images/pngegg (18).png');
-  background-size: 100% 50%;
-  background-position: center;
+  background: darkslategray;
 }
