--- a/src/app/chatroom/chatroom.component.css
+++ b/src/app/chatroom/chatroom.component.css
@@ -63,9 +63,11 @@ ul {
   grid-row: 3;
   grid-column: 1/3;
   /* background: rgba(100, 160, 162, .7); */
-  padding: 1vh 1vw;
+  padding: 0vh 1vw;
+  margin-bottom: 1em;
   display: flex;
   justify-content: space-around;
+  box-sizing: border-box;
 }
 
 .input-message {
@@ -132,13 +134,16 @@ ul {
 
   .chat-wrap {
     grid-template-columns: auto 1fr;
-    grid-template-rows: auto 75.5vh auto;
+    grid-template-rows: auto 76.8vh auto;
   }
 
   .input-message {
     width: 77vw;
     height: 4em;
     border-radius: 20px;
+    padding: 1em;
+    box-sizing: border-box;
+    margin-top: 1em;
   }
 
   .btn {
@@ -152,6 +157,7 @@ ul {
     background: wheat;
     /* box-shadow: 0px 5px 4px 4px; */
     border-radius: 50%;
+    margin-top: .7em;
   }
 
 }
@@ -173,7 +179,7 @@ ul {
 
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 551px) {
 
   .chat-wrap {
     grid-template-columns: auto 1fr;
@@ -181,7 +187,81 @@ ul {
   }
 
   .input-message {
-    width: 90vw;
-    height: 7vh;
+    width: 77vw;
+    height: 5em;
+    border-radius: 20px;
+    padding: 1em;
+    margin-top: 2em;
+    box-sizing: border-box;
+  }
+
+  #menu-icon {
+    transform: scale(2.5);
+  }
+
+  .icon {
+    position: relative;
+    margin: auto;
+    left: 15%;
+    top: 12%;
+  }
+
+  .btn {
+    display: flex;
+    align-items: center;
+    border: 2px solid;
+    width: 3em;
+    height: 3em;
+    position: relative;
+    top: 6%;
+    background: wheat;
+    /* box-shadow: 0px 5px 4px 4px; */
+    border-radius: 50%;
+    transform: scale(1.2);
+    margin-top: 1.7em;
+  }
+}
+
+
+@media only screen and (min-width: 801px) {
+
+  .chat-wrap {
+    grid-template-columns: auto 1fr;
+    grid-template-rows: 16vh 73.8vh 10vh;
+  }
+
+  .input-message {
+    width: 85vw;
+    height: 3.5em;
+    border-radius: 20px;
+    padding: 0em;
+    box-sizing: border-box;
+    margin-top: 0;
+  }
+
+  #menu-icon {
+    transform: scale(2.5);
+  }
+
+  .icon {
+    position: relative;
+    margin: auto;
+    left: 8%;
+    top: 5%;
+  }
+
+  .btn {
+    display: flex;
+    align-items: center;
+    border: 2px solid;
+    width: 2em;
+    height: 2em;
+    position: relative;
+    top: 13%;
+    background: wheat;
+    /* box-shadow: 0px 5px 4px 4px; */
+    border-radius: 50%;
+    transform: scale(1.2);
+    margin-top: 0;
   }
 }
