--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,14 +1,16 @@
 
-<form [formGroup]="login">
+<form [formGroup]="login" class="form-container">
 
   <mat-form-field class="form-content"  appearance="outline">
     <mat-label>email address</mat-label>
     <input matInput type="text" formControlName="email" placeholder="Email">
+    <mat-error *ngIf="login.controls['email'].invalid">{{emailError}}</mat-error>
   </mat-form-field><br>
 
   <mat-form-field class="form-content" appearance="outline">
     <mat-label>password</mat-label>
-    <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" placeholder="Password">
+    <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" placeholder="Password" autocomplete="on">
+    <mat-error *ngIf="login.controls['password'].invalid">{{passwordError}}</mat-error>
     <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
     <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
     </button>
