--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,23 +1,29 @@
 
   <form [formGroup]="register">
-    <mat-form-field class="mat-form" appearance="outline">
-      <mat-label>user name</mat-label>
-      <input matInput type="text" formControlName="name" placeholder="full name">
-    </mat-form-field><br>
 
     <mat-form-field class="mat-form" appearance="outline">
-      <mat-label>phone number</mat-label>
+      <mat-label>Enter Name</mat-label>
+      <input matInput type="text" formControlName="name" placeholder="full name">
+      <mat-error *ngIf="register.controls['name'].invalid">{{nameError}}</mat-error>
+    </mat-form-field><br>
+
+
+    <mat-form-field class="mat-form" appearance="outline">
+      <mat-label>Enter Phone Number</mat-label>
       <input matInput type="text" formControlName="phone" placeholder="phone number">
+      <mat-error>{{phoneError}}</mat-error>
     </mat-form-field><br>
 
     <mat-form-field class="mat-form"  appearance="outline">
-      <mat-label>email address</mat-label>
+      <mat-label>Enter Email Address</mat-label>
       <input matInput name="email" type="text" formControlName="email" placeholder="Email">
+      <mat-error>{{emailError}}</mat-error>
     </mat-form-field><br>
 
     <mat-form-field class="mat-form" appearance="outline">
-      <mat-label>password</mat-label>
+      <mat-label>Enter Password</mat-label>
       <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" placeholder="Password">
+      <mat-error>{{passwordError}}</mat-error>
       <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
       <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
       </button>
