--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,5 +1,5 @@
 
-  <form [formGroup]="register">
+  <form class="form-container" [formGroup]="register">
 
     <mat-form-field class="mat-form" appearance="outline">
       <mat-label>Enter Name</mat-label>
