--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -37,6 +37,10 @@
 
 @media only screen and (min-width: 850px) {
 
+  .form-container {
+    padding: 0 2em;
+  }
+
   .btn {
     font-size: 1em;
     padding: 0 3vw;
